...
        return carousel
    }
    
    func createTable() -> DemoTableViewController {
        
        let demoTableViewController = DemoTableViewController(nibName:"DemoTableViewController", bundle:nil)
        demoTableViewController.title = "TableViewController"
        return demoTableViewController
    }
    
    func createStaticView() -> DemoStaticViewController {
        let staticView = DemoStaticViewController(nibName:"DemoStaticViewController", bundle: nil)
        staticView.title = "StaticView"
        return staticView
    }
    
    func getPageMenuParameters() -> [CAPSPageMenuOption] {
        return [
            .MenuHeight(40),
...
