...
    if(self.delegate && [self.delegate respondsToSelector:@selector(didSelectProduct:)]) {
        
        [self.delegate didSelectProduct:tappedView.product];
        
    } else {
        
        [[BVLogger sharedLogger] info:@"No `BVRecommendationUIDelegate` set for `BVRecommendationsStaticView`. Action `didSelectProduct:` ignored."];
        
    }

}

#pragma mark - BVRecommendationCellDelegate
...
